[package]
name = "rusty_hub_egui"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/Leinnan/rusty_hub"
build = "build.rs"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6"
eframe = "0.27"
egui_extras = "0.27"
unity_hub_lib = { path="../unity_hub_lib" }
rfd = "0.14"
inline_tweak = "1"
poll-promise = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
